@startuml

title __INTERPRETER's Class Diagram__\n

  namespace com.StockExchangeModel {
    namespace StockExchange {
      namespace Interpreter {
        enum ActionType {
          ADD
          DELETE
          EXECUTE_ALL
          NULL
          SHOW
          SHOW_ALL
          SHOW_CATEGORY
          STAGE
        }
        class com.StockExchangeModel.StockExchange.Interpreter.Action {
            + arguments : String[]
            + Action()
            + Action()
        }
        abstract class com.StockExchangeModel.StockExchange.Interpreter.ActionHandler {
            + actionLeader : String
            + ActionHandler()
            {static} + getActionString()
            {static} + getActionType()
            + handleAction()
        }
        class com.StockExchangeModel.StockExchange.Interpreter.Interpreter {
            + Interpreter()
            + interpret()
            + interpretFile()
            {static} + printInterpretedResults()
            + startSession()
        }
        class com.StockExchangeModel.StockExchange.Interpreter.Parser {
            {static} + parseCSVLine()
            {static} + parseDate()
            {static} + parseLine()
        }
      }
    }
  }
  

  com.StockExchangeModel.StockExchange.Interpreter.Action o-- com.StockExchangeModel.StockExchange.Interpreter.ActionHandler.ActionType : actionType
  com.StockExchangeModel.StockExchange.Interpreter.ActionHandler o-- com.StockExchangeModel.StockExchange.StockExchange : context
  com.StockExchangeModel.StockExchange.Interpreter.ActionHandler +-down- com.StockExchangeModel.StockExchange.Interpreter.ActionHandler.ActionType
  com.StockExchangeModel.StockExchange.Interpreter.Interpreter -up-|> com.StockExchangeModel.StockExchange.Interpreter.Parser
  com.StockExchangeModel.StockExchange.Interpreter.Interpreter o-- com.StockExchangeModel.StockExchange.Company.CompanyActionHandler : companyActionHandler
  com.StockExchangeModel.StockExchange.Interpreter.Interpreter o-- com.StockExchangeModel.StockExchange.StockExchange : context
  com.StockExchangeModel.StockExchange.Interpreter.Interpreter o-- com.StockExchangeModel.StockExchange.Order.OrderActionHandler : orderActionHandler
  com.StockExchangeModel.StockExchange.Interpreter.Interpreter o-- com.StockExchangeModel.StockExchange.Trader.TraderActionHandler : traderActionHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
